--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,21 @@ code {
 .App {
   text-align: center;
 }
+
+.editing {
+  color: lightblue;
+}
+
+.not-editing {
+  color: grey;
+}
+
+.clear-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.clear-btn:focus {
+  outline: none;
+}
